# D-jepa

./: .gitignore  FAITHFULNESS.md  README.md  cjepa.py  cjepa_extras.py  cjepa_tutorial.md  djepa.py  djepa_ctr.py  djepa_ctr_long.py  djepa_extras.py  ijepa.py  ijepa_extras.py  ijepa_tutorial.md  leworldmodel.py  leworldmodel_extras.py  leworldmodel_tutorial.md  pyproject.toml  requirements.txt  submit.sh  vjepa.py  vjepa2.py  vjepa2_1.py  vjepa2_1_extras.py  vjepa2_1_tutorial.md  vjepa2_extras.py  vjepa2_tutorial.md  vjepa_extras.py  vjepa_tutorial.md
